# mHC-proj

./: .gitignore  README.md  pyproject.toml  setup.py
benchmark/: accuracy.py  runtime.py
benchmark/mhc/: kernels.py  layer.py
benchmark/mhc/tilelang/: __init__.py  birkhoff.py  sinkhorn2.py
benchmark/mhc/tilelang/tileexamples/: __init__.py  example_mhc_bwd.py  example_mhc_pre.py  kernels.py
benchmark/mhc/tilelang/tilekernels/: __init__.py  kernels.py  sinkhorn_kernel.py
mhc_proj/: __init__.py  module.py
mhc_proj/tilelang/: __init__.py  birkhoff.py  projection.py  sinkhorn.py  sinkhorn1.py
src/: bindings.cpp  birkhoff_proj_n4.cu  mhc_types.h  sinkhorn_knopp.cuh  sinkhorn_knopp_n4.cu  solvers_torch.cpp  utils.cuh
