[project]
name = "mhc_proj"
version = "0.1.0"
description = "Accelerated Birkhoff Projection for Manifold-Constrained Hyper-Connections"
authors = [
    {name = "Yixuan Qiu", email = "yixuanq@gmail.com"},
]
maintainers = [
    {name = "Yixuan Qiu", email = "yixuanq@gmail.com"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">= 3.12"
dependencies = [
    "pandas>=3.0.2",
    "torch >= 2.8.0",
]

[project.urls]
Homepage = "https://github.com/yixuan/mHC-proj"
Issues = "https://github.com/yixuan/mHC-proj/issues"

[build-system]
requires = ["torch >= 2.8.0", "setuptools >= 80.0"]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
# Only build on CPython
build = "cp*"
